--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,11 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
+  width: 100%;
+  /* display: flex; */
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
